<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIpages.LogInActivity"
    tools:theme="@style/Base.Theme.PopIn"
    >

...
        app:layout_constraintEnd_toEndOf="@id/password_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginButton"
        android:layout_width="147dp"
        android:layout_height="50dp"

        android:layout_marginStart="40dp"
        android:layout_marginTop="796dp"
        android:layout_marginEnd="40dp"
...
